// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading component  should match the snapshot 1`] = `
<div
  className="Loading__Wrapper-iPeAaa bYQjvA"
  size={60}
>
  <svg
    className="Loading__Svg-jaogAk jtphJc"
    viewBox="25 25 50 50"
  >
    <circle
      className="Loading__Circle-fbgWmj bjvvmt"
      cx="50"
      cy="50"
      r="12"
    />
  </svg>
</div>
`;

exports[`Loading component  should match the snapshot when it's not visible 1`] = `
<div
  className="Loading__Wrapper-iPeAaa eNDGAi"
  size={60}
>
  <svg
    className="Loading__Svg-jaogAk jtphJc"
    viewBox="25 25 50 50"
  >
    <circle
      className="Loading__Circle-fbgWmj bjvvmt"
      cx="50"
      cy="50"
      r="12"
    />
  </svg>
</div>
`;
